--- a/FlowchartEditingWindow.xaml
+++ b/FlowchartEditingWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Flowchart Editor" Height="700" Width="1280">
+        Title="Flowchart Editor" Height="850" Width="1280">
     <Window.Resources>
         <Storyboard x:Key="OpenMenu">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="GridMain">
@@ -45,16 +45,6 @@
                 <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="-250"/>
                 <EasingDoubleKeyFrame KeyTime="0:0:1.5" Value="0"/>
             </DoubleAnimationUsingKeyFrames>
-            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)" Storyboard.TargetName="button">
-                <EasingDoubleKeyFrame KeyTime="0" Value="0"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="0"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:1.5" Value="1"/>
-            </DoubleAnimationUsingKeyFrames>
-            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)" Storyboard.TargetName="button">
-                <EasingDoubleKeyFrame KeyTime="0" Value="0"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="0"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:1.5" Value="1"/>
-            </DoubleAnimationUsingKeyFrames>
         </Storyboard>
         <Storyboard x:Key="CloseMenu">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="GridMain">
@@ -79,7 +69,7 @@
             <BeginStoryboard x:Name="CloseMenu_BeginStoryboard" Storyboard="{StaticResource CloseMenu}"/>
         </EventTrigger>
     </Window.Triggers>
-    <Grid Name="GridPanelMenu" Background="#FFFDFBFE">
+    <Grid Name="GridPanelMenu" Background="#FFF9F9FB">
         <StackPanel x:Name="StackPanelMenu" Width="250" HorizontalAlignment="Left" Margin="-250 0 0 0" RenderTransformOrigin="0.5,0.5">
             <StackPanel.RenderTransform>
                 <TransformGroup>
@@ -89,27 +79,6 @@
                     <TranslateTransform/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Height="100" HorizontalAlignment="Center">
-                <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="#FFFDFBFE" BorderBrush="{x:Null}" Padding="0" Width="50" Height="50" Margin="10">
-                    <materialDesign:PackIcon Kind="Settings" Width="40" Height="40"/>
-                </Button>
-                <Button x:Name="button" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" BorderBrush="{x:Null}" Padding="0" Width="80" Height="80" Margin="10" RenderTransformOrigin="0.5,0.5">
-                    <Button.RenderTransform>
-                        <TransformGroup>
-                            <ScaleTransform/>
-                            <SkewTransform/>
-                            <RotateTransform/>
-                            <TranslateTransform/>
-                        </TransformGroup>
-                    </Button.RenderTransform>
-                    <Button.Background>
-                        <ImageBrush Stretch="UniformToFill" />
-                    </Button.Background>
-                </Button>
-                <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="#FFFDFBFE" BorderBrush="{x:Null}" Padding="0" Width="50" Height="50" Margin="10">
-                    <materialDesign:PackIcon Kind="InformationOutline" Width="40" Height="40"/>
-                </Button>
-            </StackPanel>
             <ListView>
                 <ListViewItem x:Name="listViewItem" Height="60" RenderTransformOrigin="0.5,0.5" Selected="listViewItem_Selected">
                     <ListViewItem.RenderTransform>
@@ -121,8 +90,8 @@
                         </TransformGroup>
                     </ListViewItem.RenderTransform>
                     <StackPanel Orientation="Horizontal" Margin="10 0">
-                        <materialDesign:PackIcon Kind="Home" Width="30" Height="30" Foreground="#FF040205" VerticalAlignment="Center" Margin="5"/>
-                        <TextBlock Text="Home" Margin="10" VerticalAlignment="Center" Foreground="#FF040205"/>
+                        <materialDesign:PackIcon Name="homeIcon" Kind="Home" Width="30" Height="30" Foreground="#FF040205" VerticalAlignment="Center" Margin="5"/>
+                        <TextBlock Name="homeText" Text="Home" Margin="10" VerticalAlignment="Center" Foreground="#FF040205"/>
                     </StackPanel>
                 </ListViewItem>
                 <ListViewItem x:Name="listViewItem1" Height="60" RenderTransformOrigin="0.5,0.5">
@@ -135,8 +104,8 @@
                         </TransformGroup>
                     </ListViewItem.RenderTransform>
                     <StackPanel Orientation="Horizontal" Margin="10 0">
-                        <materialDesign:PackIcon Kind="AccountSearch" Width="30" Height="30" Foreground="#FF040205" VerticalAlignment="Center" Margin="5"/>
-                        <TextBlock Text="Search" Margin="10" Foreground="#FF040205" VerticalAlignment="Center"/>
+                        <materialDesign:PackIcon Name="instagramIcon" Kind="Instagram" Width="30" Height="30" Foreground="#FF040205" VerticalAlignment="Center" Margin="5"/>
+                        <TextBlock Name="instagramText" Text="Instagram" Margin="10" Foreground="#FF040205" VerticalAlignment="Center"/>
                     </StackPanel>
                 </ListViewItem>
                 <ListViewItem x:Name="listViewItem2" Height="60" RenderTransformOrigin="0.5,0.5">
@@ -149,8 +118,8 @@
                         </TransformGroup>
                     </ListViewItem.RenderTransform>
                     <StackPanel Orientation="Horizontal" Margin="10 0">
-                        <materialDesign:PackIcon Kind="Facebook" Width="30" Height="30" Foreground="#FF040205" VerticalAlignment="Center" Margin="5"/>
-                        <TextBlock Text="Facebook" Margin="10" VerticalAlignment="Center" Foreground="#FF040205"/>
+                        <materialDesign:PackIcon Name="facebookIcon" Kind="Facebook" Width="30" Height="30" Foreground="#FF040205" VerticalAlignment="Center" Margin="5"/>
+                        <TextBlock Name="facebookText" Text="Facebook" Margin="10" VerticalAlignment="Center" Foreground="#FF040205"/>
                     </StackPanel>
                 </ListViewItem>
                 <ListViewItem x:Name="listViewItem3" Height="60" RenderTransformOrigin="0.5,0.5">
@@ -163,25 +132,11 @@
                         </TransformGroup>
                     </ListViewItem.RenderTransform>
                     <StackPanel Orientation="Horizontal" Margin="10 0">
-                        <materialDesign:PackIcon Kind="Twitter" Width="30" Height="30" VerticalAlignment="Center" Foreground="#FF040205" Margin="5"/>
-                        <TextBlock Text="Twitter" Margin="10" VerticalAlignment="Center" Foreground="#FF040205"/>
+                        <materialDesign:PackIcon Name="twitterIcon" Kind="Twitter" Width="30" Height="30" VerticalAlignment="Center" Foreground="#FF040205" Margin="5"/>
+                        <TextBlock Name="twitterText" Text="Twitter" Margin="10" VerticalAlignment="Center" Foreground="#FF040205"/>
                     </StackPanel>
                 </ListViewItem>
                 <ListViewItem x:Name="listViewItem4" Height="60" RenderTransformOrigin="0.5,0.5">
-                    <ListViewItem.RenderTransform>
-                        <TransformGroup>
-                            <ScaleTransform/>
-                            <SkewTransform/>
-                            <RotateTransform/>
-                            <TranslateTransform/>
-                        </TransformGroup>
-                    </ListViewItem.RenderTransform>
-                    <StackPanel Orientation="Horizontal" Margin="10 0">
-                        <materialDesign:PackIcon Kind="Skype" Width="30" Height="30" VerticalAlignment="Center" Foreground="#FF040205" Margin="5"/>
-                        <TextBlock Text="Skype" Margin="10" VerticalAlignment="Center" Foreground="#FF040205"/>
-                    </StackPanel>
-                </ListViewItem>
-                <ListViewItem x:Name="listViewItem5" Height="60" RenderTransformOrigin="0.5,0.5">
                     <ListViewItem.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -197,7 +152,7 @@
                 </ListViewItem>
             </ListView>
         </StackPanel>
-        <Grid x:Name="GridMain" Background="#FFF9F9FB" RenderTransformOrigin="0.5,0.5">
+        <Grid Name="GridMain" Background="#FFF9F9FB" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -239,16 +194,20 @@
                         Name="actionBlock"
                         MouseMove="actionBlock_MouseMove">
                         <Label FontSize="12" 
-                           Foreground="White" 
-                           Canvas.Left="40" 
-                           Canvas.Top="17"
-                           Width="100" >
-                            <TextBlock Text="Действие"
-                                   TextWrapping="Wrap"/>
+                               Foreground="White"
+                               Height="60"
+                               MaxHeight="60"
+                               MaxWidth="140"
+                               Width="140" 
+                               Canvas.Top="15">
+                        <TextBlock TextAlignment="Center" HorizontalAlignment="Center" Text="Действие"
+                                   TextWrapping="Wrap" Width="130"/>
                         </Label>
                     </Canvas>
 
-                    <TextBlock Text="Блок (1)" 
+                    <TextBlock 
+                           Name="actionBlockText"
+                           Text="Блок (1)" 
                            FontSize="10" 
                            VerticalAlignment="Center" 
                            HorizontalAlignment="Left"
@@ -280,7 +239,9 @@
                         </Label>
                     </Canvas>
 
-                    <TextBlock Text="Условие (2)" 
+                    <TextBlock 
+                           Name="conditionBlockText"
+                           Text="Условие (2)" 
                            FontSize="10" 
                            VerticalAlignment="Center" 
                            HorizontalAlignment="Left"
@@ -308,7 +269,9 @@
                         </Label>
                     </Canvas>
 
-                    <TextBlock Text="Начало / Конец (3)" 
+                    <TextBlock
+                           Name="startEndBlockText"
+                           Text="Начало / Конец (3)" 
                            FontSize="10" 
                            Grid.Column="2" 
                            Grid.Row="3" 
@@ -338,7 +301,9 @@
                         </Label>
                     </Canvas>
 
-                    <TextBlock Text="Ввод / Вывод (4)" 
+                    <TextBlock
+                           Name="inputOutputBlockText"
+                           Text="Ввод / Вывод (4)" 
                            FontSize="10" 
                            Grid.Column="2" 
                            Grid.Row="4" 
@@ -377,7 +342,9 @@
                         </Label>
                     </Canvas>
 
-                    <TextBlock Text="Подпрограмма (5)" 
+                    <TextBlock
+                           Name="subroutineBlockText"
+                           Text="Подпрограмма (5)" 
                            FontSize="10" 
                            Grid.Column="2" 
                            Grid.Row="5" 
@@ -400,7 +367,9 @@
                         </Label>
                     </Canvas>
 
-                    <TextBlock Text="Цикл (6) for" 
+                    <TextBlock
+                           Name="cycleBlockForText"
+                           Text="Цикл (6) for" 
                            FontSize="10" 
                            Grid.Column="2" 
                            Grid.Row="6" 
@@ -423,7 +392,9 @@
                         </Label>
                     </Canvas>
 
-                    <TextBlock Text="Цикл (7) do while, while (Начало)" 
+                    <TextBlock 
+                           Name="cycleBlockWhileBeginText"
+                           Text="Цикл (7) do while, while (Начало)" 
                            FontSize="10" 
                            Grid.Column="2" 
                            Grid.Row="7" 
@@ -445,7 +416,9 @@
                         </Label>
                     </Canvas>
 
-                    <TextBlock Text="Цикл (8) do while, while (Конец)" 
+                    <TextBlock 
+                           Name="cycleBlockWhileEndText"
+                           Text="Цикл (8) do while, while (Конец)" 
                            FontSize="10" 
                            Grid.Column="2" 
                            Grid.Row="8" 
@@ -468,16 +441,20 @@
                                    TextWrapping="Wrap"/>
                         </Label>
                     </Canvas>
+              
 
-                    <TextBlock Text="Ссылка (9)" 
+                <TextBlock 
+                           Name="linkBlockText" 
+                           Text="Ссылка (9)" 
                            FontSize="10" 
                            Grid.Column="2" 
                            Grid.Row="9" 
                            VerticalAlignment="Center" 
                            HorizontalAlignment="Left"/>
-                
 
-                <Canvas Grid.RowSpan="11" 
+
+                <Canvas Name="lineSeparatingLocationOfBlocksAndField"
+                        Grid.RowSpan="11" 
                         Grid.Column="3"
                         Background="#FF040205"/>
 
@@ -489,16 +466,14 @@
                         Name="destination" 
                         Grid.Column="4"
                         Grid.RowSpan="11"/>
+                
+                
 
-                <Line X1="200" Y1="200" X2="200" Y2="30" Stroke="Blue"  Grid.Column="4"
-                        Grid.RowSpan="11"/>
-
-
-                <Button x:Name="ButtonCloseMenu" Grid.Row="0" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="30" Height="30" Padding="0" Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5" Click="ButtonCloseMenu_Click" Visibility="Collapsed">
-                    <materialDesign:PackIcon Kind="Menu" Foreground="#FF040205"/>
+                <Button Name="ButtonCloseMenu" Grid.Row="0" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="30" Height="30" Padding="0" Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5" Click="ButtonCloseMenu_Click" Visibility="Collapsed">
+                    <materialDesign:PackIcon Kind="Menu"/>
                 </Button>
-                <Button x:Name="ButtonOpenMenu" Grid.Row="0" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="30" Height="30" Padding="0" Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5" Click="ButtonOpenMenu_Click">
-                    <materialDesign:PackIcon Kind="Menu" Foreground="#FF040205"/>
+                <Button Name="ButtonOpenMenu" Grid.Row="0" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="30" Height="30" Padding="0" Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5" Click="ButtonOpenMenu_Click">
+                    <materialDesign:PackIcon Kind="Menu"/>
                 </Button>
             </Grid>
         </Grid>
